add #11 get all challnges
