# models/Challenges.js
@@ -1,17 +1,18 @@
-const mongoose = require("mongoose");
+const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
 const ChallengeSchema = new Schema(
   {
     owner: {
       type: Schema.Types.ObjectId,
-      ref: "Users",
+      ref: 'User',
     },
     challengeInfo: {
       title: { type: String, maxlength: 280, require: true },
       description: { type: String, maxlength: 280, require: true },
       tips: { type: Array },
       url: { type: String, require: true },
+      difficulty: { type: String, enum: ['easy','medium','hard'], require: true },
     },
   },
   {
@@ -19,6 +20,6 @@ const ChallengeSchema = new Schema(
   }
 );
 
-const Challenge = mongoose.model("Challenges", ChallengeSchema);
+const Challenge = mongoose.model('Challenge', ChallengeSchema);
 
 module.exports = Challenge;
